feature:新建文件夹和按照种类分页查询功能